--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Data source=dating.db",
-    "DefaultConnection": "Server=DESKTOP-1SD7ALR;Database=Dating;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=SM87;Database=Dating;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
